--- a/day2_clock/index.html
+++ b/day2_clock/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class='container'>
 		<div class='clock'>
-			<div class='clock-hand clock-hand--second'></div>
-			<div class='clock-hand clock-hand--minute'></div>
-			<div class='clock-hand clock-hand--hour'></div>
+			<div class='clock__hand clock__hand--second'></div>
+			<div class='clock__hand clock__hand--minute'></div>
+			<div class='clock__hand clock__hand--hour'></div>
 
 		</div>
   <script src='index.js'></script>
