--- a/day2_clock/index.html
+++ b/day2_clock/index.html
@@ -10,10 +10,11 @@
 <body>
     <div class='container'>
 		<div class='clock'>
-			<div class='clock__hand clock__hand--second'></div>
-			<div class='clock__hand clock__hand--minute'></div>
-			<div class='clock__hand clock__hand--hour'></div>
-
+			<div class='clock__face'>
+				<div class='clock__hand clock__hand--second'></div>
+				<div class='clock__hand clock__hand--minute'></div>
+				<div class='clock__hand clock__hand--hour'></div>
+			</div>
 		</div>
   <script src='index.js'></script>
 </body>
