started on day 11

--- a/day11_custom-video-player/index.html
+++ b/day11_custom-video-player/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Console Tricks!</title>
+  <title>Custom HTML video</title>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<video></video>
-	<script type="text/javascript" src="index.js" />
+	<div class='container'>
+		<div class='player'>
+			<video width='400' class='player__video' src="https://player.vimeo.com/external/194837908.sd.mp4?s=c350076905b78c67f74d7ee39fdb4fef01d12420&profile_id=164"></video>
+			<div class='player__progress-bar'><div class='player__progress-control'></div></div>
+			<div class='player__controls'>
+				<button class='player__play-control'><i class='player__play-icon fa fa-play'></i></button>
+				<input min='0' max='1' step='0.1' value='0.5' class='player__volume-control' type='range'></input>
+				<button class='player__rewind-control'><i class='fa fa-fast-backward'></i></button>
+				<button class='player__fast-forward-control'><i class='fa fa-fast-forward'></i></button>
+			</div>
+		</div>
+		
+	 </div>
+  <script src='index.js'></script>
 </body>
 </html>
+
+<!-- Introduction to HTML 5 video tag -->
