--- a/day11_custom-video-player/index.html
+++ b/day11_custom-video-player/index.html
@@ -10,7 +10,7 @@
 	<div class='container'>
 	<div class='player__container'>
 		<div class='player'>
-			<video width='400' class='player__video' src="https://player.vimeo.com/external/194837908.sd.mp4?s=c350076905b78c67f74d7ee39fdb4fef01d12420&profile_id=164"></video>
+			<video autoplay width='400' class='player__video' src="https://player.vimeo.com/external/194837908.sd.mp4?s=c350076905b78c67f74d7ee39fdb4fef01d12420&profile_id=164"></video>
 			<div class='player__controls-container'>
 				<div class='player__controls'>
 					<div class='player__progress-bar'><div class='player__progress-control'></div></div>
