--- a/day15_local-storage-event-delegation/index.html
+++ b/day15_local-storage-event-delegation/index.html
@@ -15,8 +15,12 @@
 						<strong>LOCAL TAPAS</strong>
 					</div>
 					<ul class='order-form__list'>
-
 					</ul>
+					<div class='order-form__controls'>
+						<button class='order-form__select-button order-form__select-button--select'>Select All</button>
+						<button class='order-form__select-button order-form__select-button--deselect'>Deselect All</button>
+						<button class='order-form__select-button order-form__select-button--remove'>Clear All</button>
+					</div>
 					<form class='order-form__add-items'> 
 						<input class='order-form__input' placeholder='Item Name' type='text'/>
 						<input type='submit' class='order-form__submit' value='+ Add Item'></button>
